[gd_scene load_steps=5 format=2]

[ext_resource path="res://Systems/UI/SettingUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Systems/UI/PrimaryUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Systems/UI/MainUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/Music/mixkit-lo-fi-04-766.mp3" type="AudioStream" id=4]

[node name="MainUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="ColorRect" parent="."]
modulate = Color( 0.345098, 0.435294, 0.478431, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.5
margin_top = -188.0
margin_right = 202.5
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrimaryUI" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.5
margin_top = -133.0
margin_right = 126.5
margin_bottom = 133.0

[node name="SettingUI" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = -125.0
margin_right = 125.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[connection signal="apply_button_pressed" from="SettingUI" to="." method="_on_SettingUI_apply_button_pressed"]
[connection signal="sfx_play" from="SettingUI" to="." method="_on_SettingUI_sfx_play"]
